# facebook_friends_grapher

./: .gitignore  README.dev.md  README.md  grapher.ipynb  grapher.py
3d/: .pdm-python  community_detection.py  data.json  gexf_to_json.py  pyproject.toml  server.py
3d/templates/: index.html
client/: angular.json
client/src/: index.html  styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.ts
client/src/app/components/: home.component.html  home.component.scss  home.component.ts  jLouvain.js  three-d.component.html  three-d.component.ts
examples/: demo-visualizer-1080p.mov
scrapper/: get_data.py  get_degrees.py
scrapper/lib/: profile_url_to_username_or_id.py  scraper.py
src/: create_graph.py  get_data.py
src/lib/: parser.py  save_graph_to_vtk.py
visualizer/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
visualizer/src/: index.html  styles.scss
visualizer/src/app/: app.component.html  app.component.scss  app.component.ts
visualizer/src/app/assets/: example-graph.json
visualizer/src/app/graph/: colors.ts  community-detection-Louvain.js  graph.ts  types.ts  xml-parser.ts
visualizer/src/app/views/nav-bar/: nav-bar.component.html  nav-bar.component.scss  nav-bar.component.ts
visualizer/src/app/views/three-d/: three-d.component.html  three-d.component.scss  three-d.component.ts
visualizer/src/app/views/usage/: usage.component.html  usage.component.scss  usage.component.ts
